--- a/public_html/Registro.html
+++ b/public_html/Registro.html
@@ -77,5 +77,8 @@ and open the template in the editor.
                 </div>
             </form>
         </div>
+        <script>
+            ValidarDate();
+        </script>
     </body>
 </html>
